Audio scrubbing freezes Blender 3.2.1 #99812
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#99812
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
version: 3.2.1, branch: master, commit date: 2022-07-05 15:44, hash:
a2d59b2dac
, type: releasebuild date: 2022-07-06, 07:45:50
platform: 'Windows-10-10.0.22000-SP0'
Blender Version
Broken: Blender 3.2.1
Worked: Blender 3.1.x
Short description of error
When scrubbing packed or unpacked WAV sound files Blender freezes.
Exact steps for others to reproduce the error
fs_audio_crash_scrubbing.blend
Added subscriber: @ChristophWerner
Audio scrubbing crash Blender 3.2.1to Audio scrubbing crashe Blender 3.2.1Audio scrubbing crashe Blender 3.2.1to Audio scrubbing crashes Blender 3.2.1Added subscriber: @eschwarze
Can reproduce in 3.2.1 release and current master on windows x64.
Blender freezes whenever the playhead hits the end of a .wav strip in the sequencer.
It happens both when scrubbing over the end of the strip while audio scrubbing is active, or when playing back at regular speed.
It does not happen when scrubbing over the strip end without audio scrubbing (when no audio would be played anyway)
Seems to happen regardless of which audio device is used, unless it's set to None, in which case the freeze does not happen.
.wav files seem to be affected, but I was not able to reproduce with mp3 or mp4 with audio.
Added subscriber: @PratikPB2123
Added subscriber: @OmarEmaraDev
Changed status from 'Needs Triage' to: 'Confirmed'
Seems to be the same as #99817, though slightly different.
Audio scrubbing crashes Blender 3.2.1to Audio scrubbing freezes Blender 3.2.1Still freezes in current 3.2.2 RC build
9d38a2d21c
Works in 3.1.2 and before.
I did some more testing and found that it seemingly only affects packed .wav and .flac files. If those files are linked instead of packed, the freeze does not occur.
Other file formats seem fine even when packed.
This issue was referenced by
4181d82ad1
This issue was referenced by
e4fd2d5754
Changed status from 'Confirmed' to: 'Resolved'