Fix T99812: Audio scrubbing freezes Blender 3.2.1

Bug was caused by a change in ffmpeg's API.