extern/audaspace/plugins/ffmpeg/FFMPEGReader.cpp
@@ -363,8 +363,8 @@ int FFMPEGReader::read_packet(void* opaque, uint8_t* buf, int buf_size)
 
 	long long size = std::min(static_cast<long long>(buf_size), reader->m_membuffer->getSize() - reader->m_membufferpos);
 
-	if(size < 0)
-		return -1;
+	if(size <= 0)
+		return AVERROR_EOF;
 
 	std::memcpy(buf, ((data_t*)reader->m_membuffer->getBuffer()) + reader->m_membufferpos, size);
 	reader->m_membufferpos += size;
